# personal-fortune

./: Cargo.toml  Dockerfile.build  Dockerfile.dev  Dockerfile.serve  README.md  build.ps1  example_data.sql
logo/: personal-fortune logo-20180916-000940.piskel
src/: entry.rs  main.rs  model.rs  views.rs
src/view/: index.rs  mod.rs
static/: style.css
static/static/: style.css
templates/: base.html  main.html  quote.html  search.html
