[package]
name = "personal-fortune"
version = "0.2.0"
authors = ["Nat Knight <nathaniel.ep@gmail.com>"]
edition = "2018"

[dependencies]
rusqlite = {version = "*", features=["bundled"]}
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.0"