[package]
name = "personal-fortune"
version = "0.2.1"
authors = ["Nat Knight <nathaniel.ep@gmail.com>"]
edition = "2018"

[dependencies]
rusqlite = {version = "*", features=["bundled"]}
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
anyhow = "1.0.0"
askama = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
