[package]
name = "personal-fortune"
version = "0.2.1"
authors = ["Nat Knight <nathaniel.ep@gmail.com>"]
edition = "2018"

[dependencies]
rusqlite = {version = "*", features=["bundled"]}
axum = {version = "0.6.11"}
tokio = {version = "1.0", features = ["full"]}
anyhow = "1.0.0"
askama = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
pulldown-cmark = "0.13.0"
